# Brockston-Studio

./: .env.example  .gitignore  COMPLETION_REPORT.md  QUICKSTART.md  README.md  WIRING_PLAN.md  archiaws.py  christman_preflight.py  christman_preflight_overrides.py  claude-launch.example.json  dependency_shield.py  internet_mode.py  main.py  ollama_config.py  package-lock.json  package.json  pyproject.toml  remove_merge_markers.py  requirements.txt  start.sh  swirlmem.py  ultimateev_server.js  voice_command_loop.py
.claude/: launch.json
CHRISTMAN_VAULT/: ai_learning_engine.py  brockston_learning_coordinator.py  css_axiom.py  knowledge_engine.py  reasoning_engine.py  tone_analyzer.py  tone_manager.py
Christman-Sound/: __init__.py  christman_dsp.c  christman_preflight2.py  core.py  setup.py
ChristmanMediaInstallerV3/: CHRISTMAN_MEDIA_INSTALLER_SPEC.md
Voice_Creation_Center/: README.md  Voice_registry.py  voice_express.py  voice_ingestor.py  voice_ingestor.py.save
absenth/: brockston_core.py  brockston_learning_coordinator.py  brockston_speech_to_speech.py  conversation_engine.py  enhanced_speech_recognition.py
backend/: .gitignore  Persistent_Memory.py  Self_Improver.py  __init__.py  ai_client.py  analytics_engine.py  apple_music_service.py  autonomous_learning_engine.py  being_agent.py  being_context.py  being_eyes.py  brain_tv_ready.py  brockston_client.py  brockston_core.py  brockston_cortex.py  brockston_music_engine.py  brockston_music_studio.py  brockston_personality.py  brockston_portable.py  brockston_vocal_interface.py  christman_preflight.py  christman_sound.py  christman_sound_config.py  claude_fable5_router.py  (+26 more)
(+162 files in other folders)
