[project]
name = "brockston-studio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-doc>=0.0.4",
    "annotated-types>=0.7.0",
    "anthropic==0.40.0",
    "anyio>=4.14.0",
    "certifi>=2026.6.17",
    "dotenv>=0.9.9",
    "fastapi>=0.138.0",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx==0.25.1",
    "idna>=3.18",
    "packaging>=26.2",
    "pip>=26.1.2",
    "ptyprocess==0.7.0",
    "pydantic>=2.13.4",
    "pydantic-core>=2.46.4",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "setuptools>=82.0.1",
    "starlette>=1.3.1",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "uvicorn[standard]==0.24.0",
    "wheel>=0.47.0",
]

[tool.uv.workspace]
members = [
    "backend",
]
